syntax = "proto3";

package NothingRpcApi;

option csharp_namespace = "NothingRpcApi.Dtos";

// Dto идентификатора модели
message NothingModelIdDto
{
  // Идентификатор модели
  int32 Id = 1;
}
